--- a/src/app/screen/admin/product/product.component.html
+++ b/src/app/screen/admin/product/product.component.html
@@ -4,7 +4,8 @@
             <p class="font-light text-[20px] ml-3 pt-3">Sản Phẩm | DS Sản Phẩm</p>
         </div>
         <div class="mt-3">
-            <a class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Sản Phẩm</a>
+            <a routerLink="/admin/sanpham/add"  class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">
+            Thêm Sản Phẩm</a>
         </div>
     </div>
     <div class="mt-5">
@@ -23,14 +24,14 @@
                 <tr>
                     <td class="px-6 py-4">s</td>
                     <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4 "><span class="bg-green-100">Hiện</span></td>
+                    <td class="px-6 py-4 "><span class="bg-green-100 text-green-800 font-semibold px-3 py-1 rounded">Hiện</span></td>
                     <td class="px-6 py-4">s</td>
                     <td class="px-6 py-4">s</td>
                     <td class="px-6 py-4">
-                        <a routerLink="/" routerLinkActive="router-link-active"
-                            class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</a>
+                        <button  
+                            class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</button>
                         &nbsp;
-                        <a routerLink="/" routerLinkActive="router-link-active"
+                        <a routerLink="/"
                             class="cursor-pointer font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Edit</a>
                     </td>
                 </tr>
