--- a/src/app/screen/admin/category/category.component.html
+++ b/src/app/screen/admin/category/category.component.html
@@ -4,7 +4,7 @@
             <p class="font-light text-[20px] ml-3 pt-3">Danh Mục | DS Danh Mục</p>
         </div>
         <div class="mt-3">
-            <a class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Sản Phẩm</a>
+            <a routerLink="/admin/danhmuc/add" class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Danh Mục</a>
         </div>
     </div>
     <div class="mt-5">
