--- a/src/app/screen/admin/category/category.component.html
+++ b/src/app/screen/admin/category/category.component.html
@@ -7,33 +7,33 @@
             <a routerLink="/admin/danhmuc/add" class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Danh Mục</a>
         </div>
     </div>
+    <div class="search_order p-3">
+            <input type="text" [(ngModel)]="keyword" (keyup)="search()" class="w-full rounded-l-md  border p-2 focus:outline-none focus:border-blue-600 text-sm" placeholder="Nhập tên danh mục">           
+    </div>
     <div class="mt-5">
         <table class="w-full table-auto text-left divide-y divide-gray-300">
             <thead class="bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
                     <th class="text-gray-500 px-6 py-3">STT</th>
-                    <th class="text-gray-500 px-6 py-3">Tên sản phẩm</th>
-                    <th class="text-gray-500 px-6 py-3">Trạng thái</th>
-                    <th class="text-gray-500 px-6 py-3">Lượt xem</th>
-                    <th class="text-gray-500 px-6 py-3">Lượt yêu thích</th>
+                    <th class="text-gray-500 px-6 py-3">Tên Danh Mục</th>
+                 
                     <th class="text-gray-500 px-6 py-3">Chức năng</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4">Hiện</td>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4">
-                        <a routerLink="/" routerLinkActive="router-link-active"
-                            class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</a>
-                        &nbsp;
-                        <a routerLink="/" routerLinkActive="router-link-active"
-                            class="cursor-pointer font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Edit</a>
-                    </td>
-                </tr>
+                <ng-container *ngFor="let item of listCate">
+                    <tr>
+                        <td class="px-6 py-4">{{item.id}}</td>
+                        <td class="px-6 py-4">{{item.name}}</td>
+                        <td class="px-6 py-4">
+                            <button (click)="deleteCate(item.id)"
+                                class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</button>
+                            &nbsp;
+                            <a routerLink="/admin/danhmuc/edit/{{item.id}}" routerLinkActive="router-link-active"
+                                class="cursor-pointer font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Edit</a>
+                        </td>
+                    </tr>
+                </ng-container>
             </tbody>
         </table>
     </div>
