--- a/src/app/screen/admin/order-details/order-details.component.html
+++ b/src/app/screen/admin/order-details/order-details.component.html
@@ -54,7 +54,56 @@
                                      </tr>
                                 </tbody>
                             </table>
-                            
+                            <div class="payment">
+                                <div class="titlePayment">
+                                    <p class="font-semibold text-slate-700 text-[25px] mt-3">Tổng thanh toán</p>
+                                </div>
+                                <div class="mainPayment">
+                                    <table class="w-full">
+                                        <tr >
+                                            <td><b>Tiền tạm tính:</b></td>
+                                            <td>40.000 VNĐ</td>
+                                        </tr>
+                                        <tr >
+                                            <td><b>Giảm giá:</b></td>
+                                            <td>0 VNĐ</td>
+                                        </tr>
+                                        <tr >
+                                            <td><b>Tổng tiền:</b></td>
+                                            <td>40.000 VNĐ</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="payment">
+                                <div class="titlePayment">
+                                    <p class="font-semibold text-slate-700 text-[25px] mt-3">Thông tin vận chuyển</p>
+                                </div>
+                                <div class="mainPayment">
+                                    <table class="w-full">
+                                        <tr >
+                                            <td><b>Họ tên:</b></td>
+                                            <td>Bùi Tiến Huy</td>
+                                        </tr>
+                                        <tr >
+                                            <td><b>Địa chỉ:</b></td>
+                                            <td>Hiệp hòa quảng yên</td>
+                                        </tr>
+                                        <tr >
+                                            <td><b>Email:</b></td>
+                                            <td>bhuy20102002@gmail.com</td>
+                                        </tr>
+                                        <tr >
+                                            <td><b>Thời gian đặt:</b></td>
+                                            <td>20:00h ngày 20/10/2022</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Ghi chú:</b></td>
+                                            <td>Không</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
