--- a/src/app/screen/admin/product-admin/product-admin.component.html
+++ b/src/app/screen/admin/product-admin/product-admin.component.html
@@ -4,7 +4,7 @@
             <p class="font-light text-[20px] ml-3 pt-3">Sản Phẩm | DS Sản Phẩm</p>
         </div>
         <div class="mt-3">
-            <a routerLink="/admin/sanpham/add" class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Danh Mục</a>
+            <a routerLink="/admin/sanpham/add" class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Sản Phẩm</a>
         </div>
     </div>
     <div class="mt-5">
@@ -20,20 +20,22 @@
                 </tr>
             </thead>
             <tbody>
+                <ng-container *ngFor="let item of dataProduct">
                 <tr>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4 "><span class="bg-green-100 text-green-800 font-semibold px-3 py-1 rounded">Hiện</span></td>
-                    <td class="px-6 py-4">s</td>
-                    <td class="px-6 py-4">s</td>
+                    <td class="px-6 py-4">{{item.id}}</td>
+                    <td class="px-6 py-4">{{item.name}}</td>
+                    <td class="px-6 py-4 "><span class="{{item.status==1 ? 'bg-green-100 text-green-800': 'bg-red-100 text-red-800'}} font-semibold px-3 py-1 rounded">{{item.status | pipeProduct}}</span></td>
+                    <td class="px-6 py-4">{{item.view}}</td>
+                    <td class="px-6 py-4">{{item.status}}</td>
                     <td class="px-6 py-4">
-                        <button  
+                        <button  (click)="deleteProduct(item.id)"
                             class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</button>
                         &nbsp;
-                        <a routerLink="/"
+                        <a routerLink="/admin/sanpham/edit/{{item.id}}"
                             class="cursor-pointer font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Edit</a>
                     </td>
                 </tr>
+            </ng-container>
             </tbody>
         </table>
     </div>
