--- a/src/app/screen/admin/product-admin/editproducts/editproducts.component.html
+++ b/src/app/screen/admin/product-admin/editproducts/editproducts.component.html
@@ -11,40 +11,45 @@
     </div>
     <div class="mt-5">
         <div class="form">
-            <form action="" class="px-3 py-2">
+            <form [formGroup]="formProduct" (ngSubmit)="updateProduct()" class="px-3 py-2">
                 <div class="mb-6 w-full group">
                     <label for="">Tên sản phẩm</label>
-                    <input type="text"
+                    <input type="text" formControlName="name"
                         class="w-full  focus:outline-none focus:border-orange-500  border rounded py-1 mt-3 px-3"
                         placeholder="Nhập tên sản phẩm">
                 </div>
                 <div class="mb-6 w-full group">
                     <label for="">Giá tiền</label>
-                    <input type="number"
+                    <input type="number" formControlName="price"
                         class="w-full  focus:outline-none focus:border-orange-500  border rounded py-1 mt-3 px-3"
                         placeholder="Nhập giá tiền">
                 </div>
                 <div class="mb-6 w-full group">
                     <label for="">Mô tả sản phẩm</label>
-                    <editor apiKey="353jqw85jsoes2jewxuo89pajzhtanp4i9q7mirmyzyabz3q"></editor>
+                    <editor formControlName="description" apiKey="353jqw85jsoes2jewxuo89pajzhtanp4i9q7mirmyzyabz3q"></editor>
                 </div>
               <div class="mb-6 md:flex">
                 <div class="mb-6 w-full group px-2">
                     <label for="">Danh mục sản phẩm</label>
-                    <select name="" id="" class="w-full focus:border-orange-500 border rounded py-1 mt-3 px-3">
+                    <select formControlName="idCate" id="" class="w-full focus:border-orange-500 border rounded py-1 mt-3 px-3">
                         <option value="">--Chọn danh mục sản phẩm --</option>
+                        <ng-container *ngFor="let item of DataCate">
+                            <option value="{{item.id}}">{{item.name}}</option>
+                        </ng-container>
                     </select>
                 </div>
                 <div class="mb-6 w-full group">
                     <label for="">Trạng thái sản phẩm</label>
-                    <select name="" id="" class="w-full focus:border-orange-500 border rounded py-1 mt-3 px-3">
+                    <select formControlName="status" id="" class="w-full focus:border-orange-500 border rounded py-1 mt-3 px-3">
                         <option value="">--Chọn trạng thái sản phẩm --</option>
+                        <option value="1">Hiện</option>
+                        <option value="2">Ẩn</option>
                     </select>
                 </div>
               </div>
              <div class="mb-6 w-full group">
                  <label for="">Hình ảnh</label>
-                 <input type="file" class="border block w-full text-sm text-slate-500
+                 <input formControlName="image" type="file" class="border block w-full text-sm text-slate-500
                  file:mr-4 file:py-2 file:px-4
                  file:rounded-full file:border-0
                  file:text-sm file:font-semibold
@@ -58,7 +63,7 @@
              </div>
              <div class="mb-6">
                 <button  
-                class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Thêm sản phẩm</button>             </div>
+                class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Cập nhật sản phẩm</button>             </div>
             </form>
         </div>
     </div>
