--- a/src/app/screen/admin/topping/topping.component.html
+++ b/src/app/screen/admin/topping/topping.component.html
@@ -1,1 +1,40 @@
-<p>topping works!</p>
+<div class="content">
+    <div class="title_products pb-3 shadow flex justify-between">
+        <div>
+            <p class="font-light text-[20px] ml-3 pt-3">Topping Sản Phẩm | DS Size</p>
+        </div>
+        <div class="mt-3">
+            <a routerLink="/admin/topping/add" class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Topping</a>
+        </div>
+    </div>
+    <div class="search_order p-3">
+            <input type="text" class="w-full rounded-l-md  border p-2 focus:outline-none focus:border-blue-600 text-sm" placeholder="Nhập tên size">           
+    </div>
+    <div class="mt-5">
+        <table class="w-full table-auto text-left divide-y divide-gray-300">
+            <thead class="bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <tr>
+                    <th class="text-gray-500 px-6 py-3">STT</th>
+                    <th class="text-gray-500 px-6 py-3">Tên Topping Sản Phẩm</th>
+                 
+                    <th class="text-gray-500 px-6 py-3">Chức năng</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- <ng-container *ngFor="let item of listCate"> -->
+                    <tr>
+                        <!-- <td class="px-6 py-4">{{item.id}}</td>
+                        <td class="px-6 py-4">{{item.name}}</td>
+                        <td class="px-6 py-4">
+                            <button (click)="deleteCate(item.id)"
+                                class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</button>
+                            &nbsp;
+                            <a routerLink="/admin/danhmuc/edit/{{item.id}}" routerLinkActive="router-link-active"
+                                class="cursor-pointer font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Edit</a>
+                        </td> -->
+                    </tr>
+                <!-- </ng-container> -->
+            </tbody>
+        </table>
+    </div>
+</div>
