--- a/src/app/screen/register/register.component.html
+++ b/src/app/screen/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="h-full grid grid-cols-1  content-around">
         <div class="container mx-auto bg-white rounded px-4 py-4 lg:w-1/3 lg:px-10 drop-shadow-lg ">
             <div class="form ">
-                <form action="" class="container mx-auto">
+                <form [formGroup]="formRegister" (submit)="registerAuth()" class="container mx-auto">
                     <div class="logo ">
                         <img src="https://res.cloudinary.com/fpt-com/image/upload/v1651112762/milktea_x49uqg.png" class="w-16 md:w-28 m-auto" alt="">
                     </div>
@@ -12,12 +12,17 @@
                     <div class="mb-3 ">
                         <label for="">Email</label>
                         <br>
-                        <input type="email" placeholder="Email...." class="w-full  px-4 py-2 mb-3 border rounded focus:outline-none focus:border-green-500">
+                        <input type="email" placeholder="Email...." formControlName="email" class="w-full  px-4 py-2 mb-3 border rounded focus:outline-none focus:border-green-500">
+                    </div>
+                    <div class="mb-3 ">
+                        <label for="">Họ Tên</label>
+                        <br>
+                        <input type="text" placeholder="Name...." formControlName="name" class="w-full  px-4 py-2 mb-3 border rounded focus:outline-none focus:border-green-500">
                     </div>
                     <div class="mb-3">
                         <label for="">Mật khẩu</label>
                         <br>
-                        <input type='text' placeholder="Password....."
+                        <input type='text' formControlName="password" placeholder="Password....."
                         class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
                     </div>
                     <div class="mb-3">
