--- a/src/app/screen/admin/topping/topping.component.html
+++ b/src/app/screen/admin/topping/topping.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <div class="title_products pb-3 shadow flex justify-between">
         <div>
-            <p class="font-light text-[20px] ml-3 pt-3">Topping Sản Phẩm | DS Size</p>
+            <p class="font-light text-[20px] ml-3 pt-3">Topping Sản Phẩm | DS Topping</p>
         </div>
         <div class="mt-3">
             <a routerLink="/admin/topping/add" class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Thêm Topping</a>
@@ -16,24 +16,26 @@
                 <tr>
                     <th class="text-gray-500 px-6 py-3">STT</th>
                     <th class="text-gray-500 px-6 py-3">Tên Topping Sản Phẩm</th>
+                    <th class="text-gray-500 px-6 py-3">Giá Tiền</th>
                  
                     <th class="text-gray-500 px-6 py-3">Chức năng</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- <ng-container *ngFor="let item of listCate"> -->
+                <ng-container *ngFor="let item of dataTopping">
                     <tr>
-                        <!-- <td class="px-6 py-4">{{item.id}}</td>
+                        <td class="px-6 py-4">{{item.id}}</td>
                         <td class="px-6 py-4">{{item.name}}</td>
+                        <td class="px-6 py-4">{{item.price}}</td>
                         <td class="px-6 py-4">
-                            <button (click)="deleteCate(item.id)"
+                            <button (click)="deleteTopping(item.id)"
                                 class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Delete</button>
                             &nbsp;
-                            <a routerLink="/admin/danhmuc/edit/{{item.id}}" routerLinkActive="router-link-active"
+                            <a routerLink="/admin/topping/edit/{{item.id}}" routerLinkActive="router-link-active"
                                 class="cursor-pointer font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Edit</a>
-                        </td> -->
+                        </td>
                     </tr>
-                <!-- </ng-container> -->
+                </ng-container>
             </tbody>
         </table>
     </div>
