--- a/src/app/screen/admin/product-admin/addproducts/addproducts.component.html
+++ b/src/app/screen/admin/product-admin/addproducts/addproducts.component.html
@@ -14,7 +14,7 @@
             <form [formGroup]="formProduct" (ngSubmit)="addProduct()" class="px-3 py-2">
                 <div class="mb-6 w-full group">
                     <label for="">Tên sản phẩm</label>
-                    <input type="text" formControlName="name"
+                    <input type="text"  formControlName="name"
                         class="w-full  focus:outline-none focus:border-orange-500  border rounded py-1 mt-3 px-3"
                         placeholder="Nhập tên sản phẩm">
                 </div>
@@ -49,7 +49,7 @@
               </div>
              <div class="mb-6 w-full group">
                  <label for="">Hình ảnh</label>
-                 <input formControlName="image" type="file" class="border block w-full text-sm text-slate-500
+                 <input  (change)="changeImage($event)" type="file" class="border block w-full text-sm text-slate-500
                  file:mr-4 file:py-2 file:px-4
                  file:rounded-full file:border-0
                  file:text-sm file:font-semibold
@@ -59,12 +59,13 @@
              </div>
              <div class="mb-6">
                  <label for="">Xem trước hình ảnh</label>
-                 <img src="" alt="">
+                 <img [src]="displayimage" class="w-[150px]" alt="">
              </div>
              <div class="mb-6">
-                <button  
-                class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Thêm sản phẩm</button>             </div>
+                <button  class="cursor-pointer  font-medium bg-blue-600 px-6 py-2 rounded dark:text-white text-white hover:underline">Thêm sản phẩm</button>             </div>
             </form>
+            <input type="text" [ngModel]="[linkProduct|convertVietNam]">
+
         </div>
     </div>
 </div>
