--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -9,7 +9,7 @@
     background-color: #fff1f2ce;
     position: fixed;
     top: 0;
-    z-index: 1000000;
+    z-index: 999998;
     box-shadow: 0 4px 8px 0 rgba(101, 95, 95, 0.2), 0 6px 20px 0 rgb(0 0 0 / 19%);
     transition: top 0.3s;
     display: block;
