Cart: Add to cart

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -13,7 +13,7 @@
             <span class="text-xs ml-2">Freeship đơn từ {{ 50000 | currency: "VND"}}</span>
         </div>
     </div>
-    <div class="bg-rose-50  inset-x-0 navs">
+    <div class="bg-white border-b   inset-x-0 navs">
         <div class="main_menu md:flex  md:mt-3 container mx-auto p-4  ">
             <div class="logo ml-3 flex justify-between items-center">
                 <img src="https://res.cloudinary.com/fpt-com/image/upload/v1651112762/milktea_x49uqg.png" width="60px"
