--- a/src/app/screen/cart/cart.component.html
+++ b/src/app/screen/cart/cart.component.html
@@ -11,33 +11,35 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <ng-container *ngFor="let item of dataCart">
                     <tr>
                         <td class="flex items-center">
                             <button class="px-2"><i class="far fa-trash-alt text-[17px]"></i></button>
                             <div class="img_Cart p-3 md:block hidden">
-                                <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                                <img [src]="item.image"
                                     class="w-[100px]" alt="">
                             </div>
                             <div class="details_cart ml-10">
-                                <p class="font-semibold">Trà đào cam sả</p>
+                                <p class="font-semibold">{{item.name}}</p>
                                 <div class="details_products">
-                                    <p>Size: Lớn</p>
-                                    <p>Topping: Chưa chọn</p>
+                                    <p>Size: {{item.size_name}}</p>
+                                    <p>Topping: {{item.topping_name}}</p>
                                 </div>
                             </div>
                         </td>
                         <td>
-                            <span class="font-bold"> 30.000 VNĐ</span>
+                            <span class="font-bold"> {{item.price|currency:'VND'}}</span>
                         </td>
                         <td>
                             <button class="bg-gray-300 px-3 py-[2.5px]" (click)="decreasequantity(quantityProduct)">-</button>
-                            <input type="text" [value]="quantityProduct" class="text-center border-2 w-[40px] py-[1px] outline-none" name="" id="">
+                            <input type="text" [value]="item.quantity" class="text-center border-2 w-[40px] py-[1px] outline-none" name="" id="">
                             <button class="bg-gray-300 px-3 py-[2.5px]" (click)="increasequantity(quantityProduct)">+</button>
                         </td>
                         <td>
-                            <p class="font-bold">30.000 VNĐ</p>
+                            <p class="font-bold">{{item.price*item.quantity|currency: "VND"}} </p>
                         </td>
                     </tr>
+                </ng-container>
                 </tbody>
             </table>
         </div>
