--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -4,18 +4,25 @@
 /* } */
 /* .banner{
    display: none;
-} */ 
-.sticky{
-    background-color: #fff1f2ce;
+} */
+.sticky {
+   background-color: rgba(255, 255, 255, 0.568);
     position: fixed;
     top: 0;
     z-index: 999998;
-    box-shadow: 0 4px 8px 0 rgba(101, 95, 95, 0.2), 0 6px 20px 0 rgb(0 0 0 / 19%);
-    transition: top 0.3s;
     display: block;
-
+    transition: all 3s ease-in-out;
 }
-.navs{
-    transition: all .5s ease-in-out;
 
+.navs {
+    /* transition: all .5s ease-in; */
+    /* transition: all .5s ease-in-out; */
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 3s ease-in-out;
+}
+
+ul {
+    z-index: 999997;
 }
